Initial mapping to R4 of diagnostic report

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -31,6 +31,7 @@ dependencies:
   hl7.fhir.eu.extensions: 0.1.1-ballot
 #R5  hl7.fhir.eu.base-r5: 0.1.0-ballot
   hl7.fhir.eu.base: 0.1.0-ballot
+  hl7.fhir.extensions.r5: 4.0.1
   
   # eu.ehds.models: 0.1.0
   # eu.ehds.models: current
